# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: CMakeLists.txt
include/lib_template/: lib.hpp
include/library_template/: lib.hpp
src/: lib.cpp
test/: CMakeLists.txt  tst_lib.cpp
